fix contact page overlapping elements in small screen sizes

--- a/style.scss
+++ b/style.scss
@@ -950,5 +950,8 @@ footer {
     .main__shop_info__small-chocolate {
         display: none !important;
     }
+    .contact-page .newsletter__form {
+        position: relative !important;
+    }
 }
 //END OF FRONT PAGE MEDIA QUERIES
